[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui_parts/FileSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/file_upload_FILL0_wght400_GRAD0_opsz48_rounded.svg" type="Texture" id=2]
[ext_resource path="res://assets/theme/UI_Theme.tres" type="Theme" id=3]

[node name="FileSelect" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="BtnFileSelect" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 59.0
text = "Choose CSV File"
icon = ExtResource( 2 )
align = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 109.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
margin_left = 8.0
margin_top = 5.5
margin_right = 1016.0
margin_bottom = 39.5
scroll_vertical_enabled = false

[node name="CurrentFile" type="Label" parent="PanelContainer/ScrollContainer"]
margin_right = 1008.0
margin_bottom = 34.0
size_flags_horizontal = 3

[connection signal="pressed" from="BtnFileSelect" to="." method="_on_BtnFileSelect_pressed"]
